<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"

    >

    <EditText
        android:id="@+id/txtCod"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/txtCod"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.215" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="230dp"
        android:layout_height="35dp"
        android:layout_marginTop="28dp"
        android:onClick="Agregar"
        android:text="@string/btnAdd"
        android:textSize="10sp"
        app:backgroundTint="#C6009688"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtValor" />

    <Button
        android:id="@+id/btnDel"
        android:layout_width="230dp"
        android:layout_height="35dp"
        android:layout_marginTop="12dp"
        android:onClick="Eliminar"
        android:text="@string/btnDel"
        android:textSize="10sp"
        app:backgroundTint="#C6009688"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSearch" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="230dp"
        android:layout_height="35dp"
        android:layout_marginTop="12dp"
        android:onClick="Modificar"
        android:text="@string/btnUpdate"
        android:textSize="10sp"
        app:backgroundTint="#C6009688"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDel" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/txtNom"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCod" />

    <EditText
        android:id="@+id/txtValor"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/txtValor"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNombre"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="230dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:onClick="Buscar"
        android:text="@string/btnSearch"
        android:textSize="10sp"
        app:backgroundTint="#C6009688"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAdd" />

</androidx.constraintlayout.widget.ConstraintLayout>